# ai-quant-trader

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_pytest.py  run_ui.sh  start_dashboard.sh
config/: config.yaml  env_template.txt
docs/: GLOSSARY.md  INDEX.md  QUANTITATIVE_METHODS.md  SUMMARY.md  TESTING.md
scripts/: llm_demo.py  stock_ui.py  trading_dashboard.py  trading_pipeline.py
src/: __init__.py
src/core/: __init__.py  constants.py  utils.py
src/data/: __init__.py  data_fetcher.py  data_processor.py  feature_engineer.py  technical_indicators.py
src/models/: __init__.py  llm_predictor.py  model_manager.py
src/strategy/: __init__.py  llm_signal_generator.py  order_generator.py  portfolio_manager.py
tests/: conftest.py  test_data_fetcher.py  test_data_processor.py  test_feature_engineer.py  test_llm_predictor.py  test_llm_signal_generator.py  test_model_manager.py  test_order_generator.py  test_portfolio_manager.py
